# fitinera-nb-examples

./: README.md  main.py  pyproject.toml
notebooks/: simple_walkthrough.ipynb
